--- a/APPVIEW/Views/QLBills/BanHangOff.cshtml
+++ b/APPVIEW/Views/QLBills/BanHangOff.cshtml
@@ -97,7 +97,7 @@
 
                                             }
 
-                                            <p style="text-align:left">Giá : @item.Price</p>
+                                            <p style="text-align:left" >Giá : @item.Price.ToString("C0", new CultureInfo("vi-VN"))</p>
                                         </div>
                                     </div>
                                 </div>
@@ -191,12 +191,12 @@
                             productPriceContainer.style.alignItems = 'center';
 
                             const productPrice = document.createElement('span');
-                            productPrice.textContent = `${product.price}`;
+                            productPrice.textContent = `${formatPrice(product.price)}`;   
                             productPriceContainer.appendChild(productPrice);
                             productPriceContainer.classList.add('product-price'); // Thêm lớp product-price vào phần tử chứa giá sản phẩm
 
                             const productPriceVND = document.createElement('span');
-                            productPriceVND.textContent = ` VND`;
+                         
                             productPriceVND.style.marginLeft = '5px';
                             productPriceContainer.appendChild(productPriceVND);
 
@@ -223,7 +223,7 @@
                             const tongInput1 = document.getElementById('tong');
                             const productPriceValue = parseInt(productQuantityInput.value) * product.price;
                             totalPrice += productPriceValue; // Cộng giá sản phẩm vào tổng giá
-                            tongInput1.value = totalPrice; // Cập nhật tổng giá vào input có id là 'tong'
+                            tongInput1.value = formatPrice(totalPrice);   // Cập nhật tổng giá vào input có id là 'tong'
 
                             // Sự kiện thay đổi số lượng sản phẩm và tính tổng giá sản phẩm
                             productQuantityInput.addEventListener('change', function () {
@@ -241,7 +241,7 @@
 
                                     const tongInput = document.getElementById('tong');
                                     if (tongInput) {
-                                        tongInput.value = totalPrice; // Cập nhật tổng giá vào input có id là 'tong'
+                                         tongInput1.value = formatPrice(totalPrice); // Cập nhật tổng giá vào input có id là 'tong'
                                     }
                                 } else {
                                     console.error('Số lượng không hợp lệ!');
@@ -304,19 +304,20 @@
                             });
 
                             var cardHtml = '<div class="col-md-6 col-lg-4 col-xl-3">' +
-                                '<div class="card text-center card-product">' +
-                                '<div class="card-product__img">' + imgHTML + '</div>' + // Đóng chuỗi HTML ở đây
-                                '<button class="btn btn-primary" style="margin-top:10px" data-id="' + item.id + '">Chọn sản phẩm</button>' +
-                                '</div>' +
-                                '<div class="card-body">' +
-                                '<p style="text-align:left;display: inline-block;width: 700px">Sản phẩm: ' + item.name + '</p>' +
-                                sizeHTML + colorHTML +
-                                '<p style="text-align:left">Giá: ' + item.price + '</p>' +
-                                '</div>' +
-                                '</div>' +
-                                '</div>';
+                '<div class="card text-center card-product">' +
+                '<div class="card-product__img">' + imgHTML + '</div>' + // Đóng chuỗi HTML ở đây
+                '<button class="btn btn-primary" style="margin-top:10px" data-id="' + item.id + '">Chọn sản phẩm</button>' +
+                '</div>' +
+                '<div class="card-body">' +
+                '<p style="text-align:left;display: inline-block;width: 700px">Sản phẩm: ' + item.name + '</p>' +
+                sizeHTML + colorHTML +
+                '<p style="text-align:left">Giá: ' + formatPrice(item.price) + '</p>' +
+                '</div>' +
+                '</div>' +
+                '</div>';
 
-                            productsHTML += cardHtml;
+productsHTML += cardHtml;
+
                         });
 
                         $('#divToUpdate').html(productsHTML);
@@ -327,7 +328,9 @@
         });
     });
 
-
+    function formatPrice(price) {
+    return (price).toLocaleString('vi-VN', { style: 'currency', currency: 'VND' });
+}
     document.addEventListener('DOMContentLoaded', function () {
         const productButtons = document.querySelectorAll('button[data-id]');
         const cardBody = document.querySelector('.card-body'); // Chọn phần tử chứa thông tin sản phẩm
@@ -400,12 +403,12 @@
                                     productPriceContainer.style.alignItems = 'center';
 
                                     const productPrice = document.createElement('span');
-                                    productPrice.textContent = `${product.price}`;
+                                    productPrice.textContent = `${formatPrice(product.price)}`; 
                                     productPriceContainer.appendChild(productPrice);
                                     productPriceContainer.classList.add('product-price'); // Thêm lớp product-price vào phần tử chứa giá sản phẩm
 
                                     const productPriceVND = document.createElement('span');
-                                    productPriceVND.textContent = ` VND`;
+                                   
                                     productPriceVND.style.marginLeft = '5px';
                                     productPriceContainer.appendChild(productPriceVND);
 
@@ -432,7 +435,7 @@
                                     const tongInput1 = document.getElementById('tong');
                                     const productPriceValue = parseInt(productQuantityInput.value) * product.price;
                                     totalPrice += productPriceValue; // Cộng giá sản phẩm vào tổng giá
-                                    tongInput1.value = totalPrice; // Cập nhật tổng giá vào input có id là 'tong'
+                                   tongInput1.value = formatPrice(totalPrice);  // Cập nhật tổng giá vào input có id là 'tong'
 
                                     // Sự kiện thay đổi số lượng sản phẩm và tính tổng giá sản phẩm
                                     productQuantityInput.addEventListener('change', function () {
@@ -450,7 +453,7 @@
 
                                             const tongInput = document.getElementById('tong');
                                             if (tongInput) {
-                                                tongInput.value = totalPrice; // Cập nhật tổng giá vào input có id là 'tong'
+                                               tongInput.value = formatPrice(totalPrice);  // Cập nhật tổng giá vào input có id là 'tong'
                                             }
                                         } else {
                                             console.error('Số lượng không hợp lệ!');
