--- a/APPVIEW/Views/Bill/GetList.cshtml
+++ b/APPVIEW/Views/Bill/GetList.cshtml
@@ -1,140 +1,115 @@
 ﻿@model IEnumerable<APPDATA.Models.Bill>
 @{
-    ViewData["Title"] = "HoaDonOnl";
+    ViewData["Title"] = "Hóa đơn onlile";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    int stt = 0;
 }
 
-
-
-
-
-
-<form asp-action="GetList" class="row contact_form" method="post">
-    <div class="row">
-        <div class="col-md-3 form-group">
-            <input type="text" id="searchTerm" class="form-control" name="searchTerm" placeholder="Nhập mã hóa đơn để tìm kiếm">
-
-        </div>    <div class="col-md-2 form-group">
-            <button type="submit" class="btn btn-success">Shearch</button>
-
-        </div>
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0">Đơn hàng trực tuyến</h5>
     </div>
-</form>
-<table class="table">
-    <thead>
-        <tr>
-         
-            <th>
-            <span>Tên Khách Hàng</span>
-            </th>
-     
-            <th>
-                @Html.DisplayNameFor(model => model.Code)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShipFee)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalMoney)
-            </th>
-         
-            <th>
-                @Html.DisplayNameFor(model => model.Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
-            </th>
-        
-            <th>
-                @Html.DisplayNameFor(model => model.PayDate)
-            </th>
-       
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            
-            <td>
-                    @foreach(var acc in ViewBag.account)
+    <div class="card-body">
+      
+
+        <form asp-action="GetList" method="post" class="form-inline">
+
+            <div class="card-header row">
+
+                <div class="col-md-3">
+                    <div id="DataTables_Table_0_filter" class="dataTables_filter">
+                        <label><input type="search" class="form-control" placeholder="Search.." aria-controls="DataTables_Table_0" name="searchTerm" /></label>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div id="DataTables_Table_0_filter" class="dataTables_filter">
+                        <label><button class="btn btn-success mb-3" type="submit">Tìm kiếm</button></label>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <div class="table-responsive">
+            <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th>STT</th>
+                        <th>Tên</th>
+                        <th>Mã Hóa đơn </th>
+                        <th>Phí ship</th>
+                        <th>Số điện thoại</th>
+                        <th>Địa chỉ</th>
+                        <th>Tổng tiền</th>
+                        <th>Kiểu </th>
+                        <th>Ngày tạo</th>
+                        <th>Ngày thanh toán</th>
+                        <th>Trạng thái</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model != null && Model.Any())
                     {
 
-                        if (acc.Id == item.AccountId)
+                        foreach (var item in Model)
                         {
-                            <span>@acc.Name</span>
-                            break;
+                            <tr>
+                                <td>@(stt += 1)</td>
+                                <td>
+                                    @foreach (var acc in ViewBag.account)
+                                    {
 
+                                        if (acc.Id == item.AccountId)
+                                        {
+                                            <span>@acc.Name</span>
+                                            break;
+
+                                        }
+                                    }
+                                </td>
+                                <td>@Html.DisplayFor(modelItem => item.Code)</td>
+                                <td>@Html.DisplayFor(modelItem => item.ShipFee)</td>
+                                <td>@Html.DisplayFor(modelItem => item.PhoneNumber)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                                <td>@Html.DisplayFor(modelItem => item.TotalMoney)</td>
+                                <td>@item.Type</td>
+                                <td>@item.CreateDate</td>
+                                <td>@item.PayDate</td>
+                                <td>
+                                    @if (item.Status == 1)
+                                    {
+
+                                        <span>Chờ xác nhận</span>
+                                    }
+                                    else if (item.Status == 2)
+                                    {
+
+                                        <span>Đã xác nhận đơn hàng </span>
+                                    }
+                                    else if (item.Status == 3)
+                                    {
+                                        <span> Đang giao  </span>
+                                    }
+                                    else if (item.Status == 4)
+                                    {
+                                        <span>Đã nhận hàng và thanh toán </span>
+                                    }
+                                    else if (item.Status == 0)
+                                    {
+                                        <span>Chờ hủy </span>
+                                    }
+                                </td>
+                    
+                            </tr>
                         }
                     }
-                </td>
-        
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShipFee)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalMoney)
-            </td>
-       
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateDate)
-            </td>
-         
-         
-            <td>
-                @Html.DisplayFor(modelItem => item.PayDate)
-            </td>
-         
-            <td>
-                    @if (item.Status == 1)
+                    else
                     {
-
-                        <span>Chờ xác nhận</span>
+                        <tr>
+                            <td colspan="10" class="text-center">Không có dữ liệu.</td>
+                        </tr>
                     }
-                    else if (item.Status == 2)
-                    {
-
-                        <span>Đã xác nhận đơn hàng </span>
-                    }
-                    else if (item.Status == 3)
-                    {
-                        <span> Đang giao  </span>
-                    }
-                    else if (item.Status == 4)
-                    {
-                        <span>Đã nhận hàng và thanh toán </span>
-                    }
-                    else if (item.Status == 0)
-                    {
-                        <span>Chờ hủy </span>
-                    }
-
-
-            </td>
-          
-        </tr>
-}
-    </tbody>
-</table>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
