--- a/APPVIEW/Views/QLBills/Chitiet.cshtml
+++ b/APPVIEW/Views/QLBills/Chitiet.cshtml
@@ -2,7 +2,8 @@
 
 @{
     @using APPDATA.Models;
-    ViewData["Title"] = "Chitiet";
+    @using System.Globalization;
+    ViewData["Title"] = "Hóa đơn chi tiết";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
     List<ProductDetail> prd = ViewBag.prd;
     List<Size> size = ViewBag.size;
@@ -10,115 +11,202 @@
     Bill bil = ViewBag.bil;
     int stt = 0;
     float tienhag = 0;
+    var date = $"Ngày {bil.CreateDate.Day} Tháng {bil.CreateDate.Month} Năm {bil.CreateDate.Year}";
+    Guid IdBill;
+
 }
 
+<div class="container-xxl flex-grow-1 container-p-y">
+
+    <div class="row invoice-preview">
+        <!-- Invoice -->
+        <div class="col-xl-9 col-md-8 col-12 mb-md-0 mb-4">
+            <div class="card invoice-preview-card">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between flex-xl-row flex-md-column flex-sm-row flex-column">
+                        <div class="mb-xl-0 pb-3">
+                            <div class="d-flex svg-illustration align-items-center gap-2 mb-4">
+                                <span class="app-brand-logo demo">
+                                    <span style="color:var(--bs-primary);">
+                                        <svg width="30" height="24" viewBox="0 0 250 196" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.3002 1.25469L56.655 28.6432C59.0349 30.1128 60.4839 32.711 60.4839 35.5089V160.63C60.4839 163.468 58.9941 166.097 56.5603 167.553L12.2055 194.107C8.3836 196.395 3.43136 195.15 1.14435 191.327C0.395485 190.075 0 188.643 0 187.184V8.12039C0 3.66447 3.61061 0.0522461 8.06452 0.0522461C9.56056 0.0522461 11.0271 0.468577 12.3002 1.25469Z" fill="currentColor"></path>
+                                            <path opacity="0.077704" fill-rule="evenodd" clip-rule="evenodd" d="M0 65.2656L60.4839 99.9629V133.979L0 65.2656Z" fill="black"></path>
+                                            <path opacity="0.077704" fill-rule="evenodd" clip-rule="evenodd" d="M0 65.2656L60.4839 99.0795V119.859L0 65.2656Z" fill="black"></path>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M237.71 1.22393L193.355 28.5207C190.97 29.9889 189.516 32.5905 189.516 35.3927V160.631C189.516 163.469 191.006 166.098 193.44 167.555L237.794 194.108C241.616 196.396 246.569 195.151 248.856 191.328C249.605 190.076 250 188.644 250 187.185V8.09597C250 3.64006 246.389 0.027832 241.935 0.027832C240.444 0.027832 238.981 0.441882 237.71 1.22393Z" fill="currentColor"></path>
+                                            <path opacity="0.077704" fill-rule="evenodd" clip-rule="evenodd" d="M250 65.2656L189.516 99.8897V135.006L250 65.2656Z" fill="black"></path>
+                                            <path opacity="0.077704" fill-rule="evenodd" clip-rule="evenodd" d="M250 65.2656L189.516 99.0497V120.886L250 65.2656Z" fill="black"></path>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.2787 1.18923L125 70.3075V136.87L0 65.2465V8.06814C0 3.61223 3.61061 0 8.06452 0C9.552 0 11.0105 0.411583 12.2787 1.18923Z" fill="currentColor"></path>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.2787 1.18923L125 70.3075V136.87L0 65.2465V8.06814C0 3.61223 3.61061 0 8.06452 0C9.552 0 11.0105 0.411583 12.2787 1.18923Z" fill="white" fill-opacity="0.15"></path>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M237.721 1.18923L125 70.3075V136.87L250 65.2465V8.06814C250 3.61223 246.389 0 241.935 0C240.448 0 238.99 0.411583 237.721 1.18923Z" fill="currentColor"></path>
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M237.721 1.18923L125 70.3075V136.87L250 65.2465V8.06814C250 3.61223 246.389 0 241.935 0C240.448 0 238.99 0.411583 237.721 1.18923Z" fill="white" fill-opacity="0.3"></path>
+                                        </svg>
+                                    </span>
+                                </span>
+                                <span class="h4 mb-0 app-brand-text fw-semibold" _msttexthash="95238" _msthash="269">Materio</span>
+                            </div>
+                            <p class="mb-1" _msttexthash="979355" _msthash="270">Trường cao đăng FPT Polytechnic</p>
+                            <p class="mb-1" _msttexthash="4676633" _msthash="271">Đường Tinh văn bô-Nam Từ Liêm-Hà Nội</p>
+                            <p class="mb-0" _msttexthash="425724" _msthash="272">+ 84 0932432423</p>
+                        </div>
+                        <div>
+                            <h4 class="fw-medium text-capitalize pb-1 text-nowrap" _msttexthash="203554" _msthash="273">HÓA ĐƠN</h4>
+                            <div class="mb-1">
+                                <font _mstmutation="1" _msttexthash="788307" _msthash="274"><span _mstmutation="1" _istranslated="1">Ngày tạo hóa đơn:</span> <span _mstmutation="1" _istranslated="1">@date</span></font>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr class="my-0">
+                @*                     <div class="card-body">
+                <div class="d-flex justify-content-between flex-wrap">
+                <div class="my-3 me-3">
+                <h6 _msttexthash="1667627" _msthash="276">Hóa đơn đến:</h6>
+                <p class="mb-1" _msttexthash="207922" _msthash="277">Thomas shelby</p>
+                <p class="mb-1" _msttexthash="303095" _msthash="278">Công Ty TNHH Shelby</p>
+                <p class="mb-1" _msttexthash="4210206" _msthash="279">Small Heath, B10 0HF, Vương quốc Anh</p>
+                <p class="mb-1" _msttexthash="100854" _msthash="280">718-986-6062</p>
+                <p class="mb-0" _msttexthash="569088" _msthash="281">peakyFBlinders@gmail.com</p>
+                </div>
+                </div>
+                </div> *@
+                <div class="table-responsive">
 
 
-<div class="card">
-    <div class="card-header">
-    </div>
-    <div class="card-body">
 
-        <div class="table-responsive">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>STT</th>
-                        <th>Tên sản phẩm</th>
-                        <th>Size </th>
+                    <table class="table table-borderless m-0">
 
-                        <th>Màu </th>
-                        <th>Số lượng</th>
-                        <th>Đơn giá</th>
-                        <th>Tổng tiền</th>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (Model.Count() > 0)
-                    {
-                        @foreach (var itembill in Model)
-                        {
-                            tienhag += itembill.Price;
-
+                        <thead class="border-top">
                             <tr>
-                                <td>@(stt += 1)</td>
-                                <td>@foreach (var pr in prd)
-                                    {
-                                        if (pr.Id == itembill.ProductDetailID)
-                                        {   
-                                            @pr.Name
-                                            ; break;
-                                        }
-                                    }</td>
-
-
-
-                                <td>
-                                    @foreach (var siz in size)
-                                    {
-                                        if (siz.Id == prd.FirstOrDefault(c => c.Id == itembill.ProductDetailID).Id_Size)
-                                        {
-                                            @siz.Name
-                                            ; break;
-                                        }
-                                    }
-                                </td>
-                                <td>
-                                    @foreach (var siz in color)
-                                    {
-                                        if (siz.Id == prd.FirstOrDefault(c => c.Id == itembill.ProductDetailID).Id_Color)
-                                        {
-                                            @siz.Name
-                                            ; break;
-                                        }
-                                    }
-                                </td>
-                                <td>
-                                    @itembill.Amount
-                                </td>
-
-                                <td>
-                                    @foreach (var pr in prd)
-                                    {
-                                        if (pr.Id == itembill.ProductDetailID)
-                                        {
-                                            @pr.Price
-                                            ; break;
-                                        }
-                                    }
-                                </td>
-
-                                <td>
-                                    @itembill.Price
-                                </td>
-
-
-
-
+                                <th _msttexthash="1065948" _msthash="293">STT</th>
+                                <th _msttexthash="1065948" _msthash="293">Sản phẩm</th>
+                                <th _msttexthash="1065948" _msthash="293">Kích cỡ</th>
+                                <th _msttexthash="1065948" _msthash="293">Màu sắc</th>
+                                <th _msttexthash="1065948" _msthash="293">Số lượng</th>
+                                <th _msttexthash="1065948" _msthash="293">Giá tiền</th>
+                                <th _msttexthash="1065948" _msthash="293">Tổng tiền sp</th>
 
                             </tr>
+                        </thead>
+                        @if (Model.Count() > 0)
+                        {
+                            @foreach (var itembill in Model)
+                            {
+                                tienhag += itembill.Price;
+                                IdBill = itembill.id;
+                                <tbody>
+                                    <tr>
+                                        <td>@(stt += 1)</td>
+
+                                        <td class="text-nowrap text-heading" _msttexthash="4094675" _msthash="298">
+                                            @foreach (var pr in prd)
+                                            {
+                                                if (pr.Id == itembill.ProductDetailID)
+                                                {
+                                                    @pr.Name
+                                                    ; break;
+                                                }
+                                            }
+                                        </td>
+                                        <td class="text-nowrap text-heading" _msttexthash="4094675" _msthash="298">
+                                            @foreach (var siz in size)
+                                            {
+                                                if (siz.Id == prd.FirstOrDefault(c => c.Id == itembill.ProductDetailID).Id_Size)
+                                                {
+                                                    @siz.Name
+                                                    ; break;
+                                                }
+                                            }
+                                        </td>
+                                        <td class="text-nowrap text-heading" _msttexthash="4094675" _msthash="298">
+                                            @foreach (var siz in color)
+                                            {
+                                                if (siz.Id == prd.FirstOrDefault(c => c.Id == itembill.ProductDetailID).Id_Color)
+                                                {
+                                                    @siz.Name
+                                                    ; break;
+                                                }
+                                            }
+                                        </td>
+                                        <td class="text-nowrap text-heading" _msttexthash="4094675" _msthash="298">
+                                            @itembill.Amount
+                                        </td>
+                                        <td class="text-nowrap text-heading" _msttexthash="4094675" _msthash="298">
+                                            @foreach (var pr in prd)
+                                            {
+                                                if (pr.Id == itembill.ProductDetailID)
+                                                {
+                                                    @pr.Price.ToString("C0", new CultureInfo("vi-VN"))
+
+
+                                                    ; break;
+                                                }
+                                            }
+                                        </td>
+                                        <td>
+                                            @itembill.Price.ToString("C0", new CultureInfo("vi-VN"))
+                                        </td>
+
+                                    </tr>
+                                </tbody>
+                            }
                         }
-                    }
-                    else
-                    {
-                        <tr>
-                            <td colspan="12" class="text-center">No Data.</td>
-                        </tr>
-                    }
 
-                    <tr>
-
-                        <td>Tiền hàng : @(bil.TotalMoney-bil.ShipFee)  </td>
-                    </tr>
-                    <tr>
-                        <td>Tiền ship  : @bil.ShipFee</td>
-                    </tr>
-                    <tr>
-                        <td>Tổng tiền : @bil.TotalMoney</td>
-                    </tr>
-                </tbody>
-            </table>
+                    </table>
+                </div>
+                <hr class="my-0" />
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-6 mb-md-0 mb-3">
+                            <div>
+                                <p class="mb-2">
+                                    <font _mstmutation="1" _msttexthash="904709" _msthash="318"><span class="me-1 text-heading" _mstmutation="1" _istranslated="1">Tên khách hàng:</span> <span _mstmutation="1" _istranslated="1">@bil.Name</span></font>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-flex justify-content-md-end mt-2">
+                            <div class="invoice-calculations">
+                                <div class="d-flex justify-content-between mb-2">
+                                    <span class="w-px-100" _msttexthash="2234193" _msthash="320">Tiền hàng:</span>
+                                    <h6 class="mb-0 pt-1" _msttexthash="52780" _msthash="321">
+                                        @string.Format(new CultureInfo("vi-VN"), "{0:C0}",bil.TotalMoney - bil.ShipFee)
+                                    </h6>
+                                </div>
+                                <div class="d-flex justify-content-between mb-2">
+                                    <span class="w-px-100" _msttexthash="1063673" _msthash="324">Tiền ship:</span>
+                                    <h6 class="mb-0 pt-1" _msttexthash="42406" _msthash="325">
+                                        @string.Format(new CultureInfo("vi-VN"), "{0:C0}", bil.ShipFee)
+                                    </h6>
+                                </div>
+                                <hr>
+                                <div class="d-flex justify-content-between">
+                                    <span class="w-px-100" _msttexthash="1980563" _msthash="326">Tổng tiền:</span>
+                                    <h6 class="mb-0 pt-1" _msttexthash="52897" _msthash="327" style="color:red">
+                                        @string.Format(new CultureInfo("vi-VN"), "{0:C0}", bil.TotalMoney)
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- /Invoice -->
+        <!-- Invoice Actions -->
+        <div class="col-xl-3 col-md-4 col-12 invoice-actions">
+            <div class="card">
+                <div class="card-body">
+                    <button class="btn btn-primary d-grid w-100 mb-3 waves-effect waves-light" data-bs-toggle="offcanvas" data-bs-target="#sendInvoiceOffcanvas">
+                        <span class="d-flex align-items-center justify-content-center text-nowrap"><i class="mdi mdi-send-outline scaleX-n1-rtl me-2"></i><font _mstmutation="1" _msttexthash="1048996" _msthash="329">Quay lại </font></span>
+                    </button>
+                    @* <a href="@Url.Action("XacNhan", new { id = Model. })" class="btn btn-success d-grid w-100 waves-effect waves-light" data-bs-toggle="offcanvas" data-bs-target="#addPaymentOffcanvas">
+                        <span class="d-flex align-items-center justify-content-center text-nowrap"><i class="mdi mdi-currency-usd me-1"></i><font _mstmutation="1" _msttexthash="277992" _msthash="333">Xác nhận đơn hàng</font></span>
+                    </a> *@
+                </div>
+            </div>
+        </div>
+        <!-- /Invoice Actions -->
     </div>
+
 </div>
+
+
