--- a/APPVIEW/Views/Home/Shop.cshtml
+++ b/APPVIEW/Views/Home/Shop.cshtml
@@ -192,7 +192,7 @@
                                 <label for="price-5">400.000 - 500.000 VNĐ</label>
                             </li>
                             <li class="filter-list">
-                                <input class="pixel-radio" type="checkbox" id="price-5" value="" name="price">
+                                <input class="pixel-radio" type="checkbox" id="price-5" value="500000-0" name="price">
                                 <label for="price-5">Trên 500.000 VNĐ</label>
                             </li>
                         </ul>
