--- a/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Admin/Index.cshtml
@@ -111,13 +111,13 @@
                             <!-- Thêm ô input cho startdate -->
                             <div style="margin-right: 10px;">
                                 <label for="startDate">Ngày bắt đầu:</label>
-                            <input type="date" class="form-control" id="startDate" placeholder="dd/mm/yyyy" oninput="formatDate(this)">
+                            <input type="text" class="form-control" id="startDate" placeholder="dd/mm/yyyy" oninput="formatDate(this)">
                             </div>
 
                             <!-- Thêm ô input cho enddate -->
                             <div>
                                 <label for="endDate">Ngày kết thúc:</label>
-                            <input type="date" class="form-control" id="endDate" placeholder="dd/mm/yyyy" oninput="formatDate(this)">
+                            <input type="text" class="form-control" id="endDate" placeholder="dd/mm/yyyy" oninput="formatDate(this)">
                             </div>
                         </div>
                         <!-- Nút xác nhận -->
