--- a/APPVIEW/Views/Home/CheckOutOnl.cshtml
+++ b/APPVIEW/Views/Home/CheckOutOnl.cshtml
@@ -64,7 +64,7 @@
                                                         <div class="col-md-12 form-group">
 
                                                             <input type="text" placeholder="Enter coupon code">
-                                                            <button class="btn btn-primary" asp-action="ApplyDiscount2">Chọn khuyến mãi</button>
+                                                            <button class="btn btn-primary" asp-action="ApplyDiscount2">Apply Coupon</button>
                                                         </div>
                                                         <div class="col-md-12 form-group">
 
