--- a/APPVIEW/Views/ProductDetail/GetList.cshtml
+++ b/APPVIEW/Views/ProductDetail/GetList.cshtml
@@ -28,7 +28,7 @@
             </div>
 
         </form>
-        <div class="table-responsive table-sm">
+        <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -40,7 +40,7 @@
                         <th>Màu sắc</th>
                         <th>Nhà cung cấp</th>
                         <th>Số lượng</th>
-                        <th>Giá</th>
+                        <th> Giá</th>
                         <th> Trạng thái</th>
                         <th>Ngày tạo </th>
                         <th> Ngày cập nhật </th>
@@ -237,7 +237,7 @@
                     else
                     {
                         <tr>
-                            <td colspan="8" class="text-center">Không có dữ liệu.</td>
+                            <td colspan="8" class="text-center">No Data.</td>
                         </tr>
                     }
 
